...
        <scene sceneID="APc-nh-Qas">
            <objects>
                <viewController storyboardIdentifier="ChangePasswardVC" id="Jhe-YC-yw5" customClass="ChangePasswordViewController" customModule="CMS" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="0hn-jI-cjQ">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                                </constraints>
                                            </view>
                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="CTQ-Pq-jOk">
                                                <rect key="frame" x="115" y="129" width="145" height="40"/>
                                                <constraints>
...
                                                </constraints>
                                            </imageView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login To Your Account" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4e-Po-XeY">
                                                <rect key="frame" x="24" y="227" width="327" height="50"/>
                                                <constraints>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aMS-MH-dEw" customClass="ExtendedTextField" customModule="CMS" customModuleProvider="target">
                                                        <rect key="frame" x="8" y="0.0" width="269" height="50"/>
                                                        <nil key="textColor"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jfJ-fy-mWM" customClass="ExtendedTextField" customModule="CMS" customModuleProvider="target">
                                                        <rect key="frame" x="8" y="0.0" width="269" height="50"/>
                                                        <nil key="textColor"/>
...
                                                        </constraints>
                                                    </view>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember Me" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="299-Dh-gto">
                                                        <rect key="frame" x="42" y="0.0" width="124.5" height="40"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                <state key="normal" title="Log In">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
...
