...
 typealias OKActionCompletionBlock = ()-> Void
 class ShowAlert: UIViewController {
    
    static let shared = ShowAlert()
    func showAlertView(title: String, message: String, controller: UIViewController) {
        let alert = UIAlertController(title: title, message: message, preferredStyle: UIAlertControllerStyle.alert)
        alert.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.default, handler: { _ in
           
        }))
        controller.present(alert, animated: true, completion: nil)
    }
 }
 
...
