...
    func validateInformation()->Bool    {
        let objValidate   = Validate()
        var (status,message) = objValidate.validateEmailField(emailTextField as! ExtendedTextField)
        if !status{
            switch message {
            case "Empty field":
                ShowAlert.shared.showAlertView(title: Constant.TitleApp, message: "Please enter email", controller: self)
                break
            case "Invalid Email format":
                ShowAlert.shared.showAlertView(title: Constant.TitleApp, message: "Please enter valid email", controller: self)
                break
            default:
                break
...
